--- a/homepage.html
+++ b/homepage.html
@@ -5,43 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="homepage.css">
     <link rel="stylesheet" type="text/css" href="home2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <html>
 <body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <div class="links">
     <a style="border:none;" href="#">Minha conta</a>
     <a href="#">Contato</a>     
     <a href="#">Quem somos</a>
 </div>
-  <header>
-    <div class="container">
-      <img class="logo" src="Logo-removebg-preview.png" alt="Descrição da imagem">
-      <nav>
-        <ul>
-          <li><a href="#">Lancamentos</a></li>
-          <li><a href="#">Produtos</a></li>
-          <li><a href="#">Colecoes</a></li>
+    <!--Barra de navegacao -->
+    <nav class="navbar navbar-expand-sm">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="homepage.html"><img src="Logo-removebg-preview.png" alt="Página Inical" width="60" height="60"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar"></button>
+        <span class="navbar-toggler-icon"></span>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cantos.html" tabindex="-1" aria-disabled="true" style="color: rgb(0, 0, 0); font-weight: bold;">Lancamentos</a>
+               <li class="nav-item">
+           <a class="nav-link" href="sobre.html" tabindex="-1" aria-disabled="true" style="color: rgb(0, 0, 0); font-weight: bold;">Produtos</a>
+           <li class="nav-item">
+           <a class="nav-link" href="contatos.html" tabindex="-1" aria-disabled="true" style="color: rgb(0, 0, 0); font-weight: bold;">Colecoes</a>
         </ul>
-      </nav>
-      <form class="search-form">
+        <form class="search-form">
         <input type="text" placeholder="Buscar">
         <button type="submit">
-          <i class="fas fa-search"></i>
         </button>
       </form>
       </div>
-      <div class="header">
         <button class="favorite-button"></button>
       </div>
       <button class="cart-button"></button>
     </div>
-  </header>
-  <main>
+  </nav>
   <div class="avisofrete">
     <div class="fretegratis">
-        <img src="caixa-de-entrega.png" alt="Caixa-de-entrega">
+        <img src="caixa-de-entrega.png" alt="Caixa-de-entrega" width="20" height="20">
         <p>FRETE GRÁTIS</p>
-        <P style="font-weight: none;">acima de R$100 para todo o Brasil</P>
+        <P>acima de R$100 para todo o Brasil</P>
     </div>
   </div>
 </div>
