--- a/homepage.html
+++ b/homepage.html
@@ -6,14 +6,28 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="homepage.css">
   <link rel="stylesheet" type="text/css" href="home2.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
+  <!DOCTYPE html>
+  <html lang="pt-br">
+
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="homepage.css">
+    <link rel="stylesheet" type="text/css" href="home2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  </head>
 
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
   <div class="links">
     <a style="border:none;" href="#">Minha conta</a>
@@ -27,30 +41,30 @@
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    
-    
+
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="cantos.html" tabindex="-1" aria-disabled="true"
-          style="color: rgb(0, 0, 0); font-weight: bold;">Lancamentos</a>
+            style="color: rgb(0, 0, 0); font-weight: bold;">Lancamentos</a>
         </li>
-          <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" href="sobre.html" tabindex="-1" aria-disabled="true"
             style="color: rgb(0, 0, 0); font-weight: bold;">Produtos</a>
-          </li>
-            <li class="nav-item">
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="contatos.html" tabindex="-1" aria-disabled="true"
             style="color: rgb(0, 0, 0); font-weight: bold;">Colecoes</a>
-          </li>
-          </ul>
+        </li>
+      </ul>
       <form class="search-form form-inline my-2 my-lg-0">
         <input type="text" placeholder="Buscar">
         <button type="submit">
         </button>
-    <button class="favorite-button"></button>
-    <button class="cart-button"></button>
-    </form>
+        <button class="favorite-button"></button>
+        <button class="cart-button"></button>
+      </form>
     </div>
   </nav>
 
@@ -59,12 +73,12 @@
 
 
 
-
   <div class="avisofrete">
     <div class="fretegratis">
-      <img src="caixa-de-entrega.png" alt="Caixa-de-entrega" width="20" height="20">
-      <p>FRETE GRÁTIS</p>
-      <P>acima de R$100 para todo o Brasil</P>
+     <img src="caixa-de-entrega.png" alt="Caixa-de-entrega" width="20" height="20">
+      <br>
+      <p>FRETE GRÁTIS!</p>
+      <p>Acima de R$100 para todo o Brasil</p>
     </div>
   </div>
   </div>
